# yuri

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  PROTOCOL.md  README.md
c_deps/: CMakeLists.txt  Makefile  README.md  db.c  db_mysql.c  ers.c  md5calc.c  rndm.h  showmsg.c  showmsg.h  strlib.c  strlib.h  timer.c  timer.h  yuri.h
c_src/: board_db.c  board_db.h  char_db.c  char_db.h  char_login.c  char_login.h  char_map.c  char_server.c  char_server.h  clan_db.c  clan_db.h  class_db.c  class_db.h  command.c  command.h  config.c  config.h  core.c  core.h  creation_db.c  creation_db.h  decrypt_cli.c  gm_command.c  gm_command.h  intif.c  intif.h  item_db.c  login.c  login_char.c  login_parse.c  login_server.c  login_server.h  magic_db.c  map_char.c  map_char.h  map_parse.c  map_parse.h  map_server.c  map_server.h  metan_cli.c  (+14 more)
c_src/char/: Makefile  char.c  char.h  char_db.c  logif.c  logif.h  mapif.c
c_src/common/: CMakeLists.txt  Makefile  config.c  config.h  core.c  core.h  mmo.h  net_crypt.h  session.c  session.h
c_src/decrypt/: Makefile
c_src/login/: Makefile  clif.c  clif.h  intif.c  login.c  login.h
c_src/map/: Makefile  board_db.c  board_db.h  clan_db.c  clan_db.h  class_db.c  clif.c  clif.h  command.c  creation.c  creation.h  intif.c  itemdb.c  itemdb.h  magic.c  map.c  map.h  mob.c  mob.h  npc.c  npc.h  pc.c  pc.h  recipedb.c  recipedb.h  sl.c  sl.h
c_src/metan/: metan.c
conf/: battle.conf  char.conf  inter.conf  lang.conf  lang.yaml  login.conf  map.conf  map_load.conf  save.conf  script.conf  server.yaml
data/: static_objects.tbl  tnl_exp.csv
db/: guide_db.txt
migrations/: V1__initial.sql
src/: lib.rs  main.rs
src/char/: Makefile  char.c  char.h  char_db.c  char_db.h  logif.c  logif.h  mapif.c  mapif.h  saveif.c  saveif.h  zlib.h
src/common/: Makefile  cbasetypes.h  core.c  core.h  crypt.c  crypt.h  db.c  db.h  db_mysql.c  db_mysql.h  ers.c  ers.h  malloc.c  malloc.h  md5calc.c  md5calc.h  mmo.h  net_crypt.c  net_crypt.h  rndm.c  rndm.h  session.c  showmsg.c  showmsg.h  socket.c  socket.h  strlib.c  strlib.h  timer.c  timer.h  version.h  zlib.h
src/decrypt/: Makefile  main.c
src/login/: Makefile  clif.c  clif.h  intif.c  login.c  login.h
src/map/: Makefile  board_db.c  board_db.h  clan_db.c  clan_db.h  class_db.c  class_db.h  clif.c  clif.h  command.c  command.h  creation.c  creation.h  guide.c  guide.h  intif.c  intif.h  itemdb.c  itemdb.h  magic.c  magic.h  map.c  map.h  mob.c  mob.h  npc.c  npc.h  pc.c  pc.h  recipedb.c  recipedb.h  script.c  script.h  sl.c  sl.h
src/metan/: Makefile  class_db.c  class_db.h  guide.c  guide.h  itemdb.c  itemdb.h  metan.c  metan.h
src/network/: crypt.rs
